pg-admin/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pg-admin-route
  namespace: pd-admin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /pg-admin
            pathType: Prefix
            backend:
              service:
                name: pg-admin
                port:
                  name: http
    - host: pg-admin.mars.stargate
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pg-admin
                port:
                  name: http
