pg-admin/templates/ingresspub.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pg-admin-route2
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: pg-admin.interpolar.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pg-admin
                port:
                  name: http
